# ray_trace

./: .gitignore  CMakeLists.txt  README.md  build.conf  compile_commands.json  ray_trace.sln  ray_trace.vcxproj  ray_trace.vcxproj.filters
.cquery_cache/@@Users@antonkondratuk@Desktop@cpp@ray_trace/: @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@Availability.h.json  @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@AvailabilityInternal.h.json  @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@AvailabilityVersions.h.json  @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@__wctype.h.json  @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@_ctermid.h.json  @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@_ctype.h.json  @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@_stdio.h.json  @Library@Developer@CommandLineTools@SDKs@MacOSX11.3.sdk@usr@include@_types.h.json  (+164 more)
include/: stb_image.h
include/glad/: glad.h
kernels/: all_included.cl  data_structures.hcl  kernel.cl  main.cl  random.cl  random.hcl  ray_trace.cl  ray_trace.hcl
src/: Application.cpp  Application.hpp  BVH.cpp  BVH.hpp  Bounding_Box.cpp  Bounding_Box.hpp  CPURenderer.cpp  CPURenderer.hpp  Camera.hpp  GPURenderer.cpp  GPURenderer.hpp  Job_System.cpp  Job_System.hpp  Math.hpp  Obj_Loader.cpp  Obj_Loader.hpp  Random.hpp  Ray_Trace.cpp  Ray_Trace.hpp  Renderer.cpp  Renderer.hpp  glad.cpp  main.cpp  math.hpp  ray_trace.cpp  ray_trace.hpp  stb_impl.cpp  world.hpp
(+11 files in other folders)
